--- a/Project/changepass.html
+++ b/Project/changepass.html
@@ -58,6 +58,7 @@
                   <img src="ceye-icon.png" alt="Show Password">
               </span>
           </div>
+          <p id="password-match-message" style="color: red;"></p>
         </div><br>
         <div class="form-group">
           <button type="submit" id="Button" onclick="return checkPasswordMatch()">Change Password</button>
