--- a/Project/login.html
+++ b/Project/login.html
@@ -36,7 +36,7 @@
         <label for="Email">Email Address:</label>
         <input type="email" id="email" name="email">
       </div>
-      <div class="form-group" id="Password">
+      <div class="form-group" id="password-group">
         <label for="Password">Password:</label>
         <div class="password-container">
           <input type="password" id="Password" name="Password" required>
