--- a/Project/signin.html
+++ b/Project/signin.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="design.css">
-    <script src="mywebscript.js"></script>
+    <script src="mywebscript.js" defer></script>
     <link rel="icon" type="image/png" href="Favicon.png">
     <title>Sign In - Studitute Portal</title>
 </head>
@@ -32,14 +32,14 @@
 
     <div class="content">
         <div class="form-container">
-            <form method="GET" action="userprofile.html" class="form-grid">
+            <form method="GET" action="userprofile.html" class="form-grid" onsubmit="return checkPasswordMatch()">
                 <div class="form-group" id="name-group">
                     <label for="Name">Full Name:</label>
                     <input type="text" id="Name" name="Name" required>
                 </div>
                 <div class="form-group" id="email-group">
                     <label for="EmailAddress">Email Address:</label>
-                    <input type="text" id="EmailAddress" name="EmailAddress" required>
+                    <input type="email" id="EmailAddress" name="EmailAddress" required>
                 </div>
                 <div class="form-group" id="password-group">
                     <label for="Password">Password:</label>
@@ -50,7 +50,7 @@
                         </span>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group" id="confirm-password-group">
                     <label for="ConfirmPassword">Confirm Password:</label>
                     <div class="password-container">
                         <input type="password" id="ConfirmPassword" name="ConfirmPassword" required>
@@ -58,6 +58,7 @@
                             <img src="ceye-icon.png" alt="Show Password">
                         </span>
                     </div>
+                    <p id="password-match-message" style="color: red;"></p>
                 </div>
                 <div class="form-group" id="profileinformation-group">
                     <label for="profileinformation">Short Information for profile:</label>
@@ -78,7 +79,7 @@
                 </div>
 
                 <div class="form-group" id="register-group">
-                    <button type="submit" id="Button" onclick="return checkPasswordMatch()">Register</button>
+                    <button type="submit" id="Button">Register</button>
                 </div>
             </form>
             <p>Already a User? <a href="login.html" style="color: black; text-decoration:underline;">Log In</a> Now!!</p>
