--- a/Project/signin.html
+++ b/Project/signin.html
@@ -41,11 +41,11 @@
                     <label for="EmailAddress">Email Address:</label>
                     <input type="email" id="EmailAddress" name="EmailAddress" required>
                 </div>
-                <div class="form-group" id="password-group">
+                <div class="form-group" id="password">
                     <label for="Password">Password:</label>
                     <div class="password-container">
-                        <input type="password" id="Password" name="Password" required>
-                        <span class="toggle-password" onclick="togglePasswordVisibility('Password', this)">
+                        <input type="password" id="newPassword" name="newPassword" required>
+                        <span class="toggle-password" onclick="togglePasswordVisibility('newPassword', this)">
                             <img src="ceye-icon.png" alt="Show Password">
                         </span>
                     </div>
