--- a/Project/detailsofinst.html
+++ b/Project/detailsofinst.html
@@ -27,7 +27,7 @@
     <ul class="nav-list">
         <li class="nav-item"><a href="searchpage.html">Search</a></li>
         <li class="nav-item"><a href="crosscredit.html">Cross Credit</a></li>
-        <li class="nav-item"><a href="fav.html">Favorites</a></li>
+        <li class="nav-item"><a href="fav.html">Favourites</a></li>
         <li class="nav-item"><a href="contactus.html">Contact Us</a></li>
     </ul>
   </nav>
