--- a/Project/fav.html
+++ b/Project/fav.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="design.css">
 <script src="mywebscript.js"></script>
 <link rel="icon" type="image/png" href="Favicon.png">
-<title>Favorites - Studitute Portal</title>
+<title>Favourites - Studitute Portal</title>
 </head>
 <body>
 
@@ -25,7 +25,7 @@
     <ul class="nav-list">
         <li class="nav-item"><a href="searchpage.html">Search</a></li>
         <li class="nav-item"><a href="crosscredit.html">Cross Credit</a></li>
-        <li class="nav-item"><a href="fav.html">Favorites</a></li>
+        <li class="nav-item"><a href="fav.html">Favourites</a></li>
         <li class="nav-item"><a href="contactus.html">Contact Us</a></li>
     </ul>
   </nav>
