changes in details of institution

--- a/Project/detailsofinst.html
+++ b/Project/detailsofinst.html
@@ -35,7 +35,7 @@
   <div class="content">
     <div class="institution-details">
         <h1>Victoria University</h1>
-        <p><strong>Level:</strong> 2</p>
+        <p class="level"><strong>Level:</strong> 2</p>
         <p><strong>Locations:</strong> Melbourne, Sydney, Canberra</p>
         
         <h2>Programs Offered</h2>
