--- a/Project/resultofsearch.html
+++ b/Project/resultofsearch.html
@@ -46,7 +46,7 @@
       </tr>
       <tr>
         <td>1</td>
-        <td>Canberra Institute of Technology </td>
+        <td><a href="detailsofinst.html" style="color:black">Canberra Institute of Technology</a></td>
         <td>11,500</td>
         <td>Canberra</td>
         <td>1.5 Years</td>
@@ -56,7 +56,7 @@
       </tr>
       <tr>
         <td>2</td>
-        <td>University of Canberra</td>
+        <td><a href="detailsofinst.html" style="color:black">University of Canberra</a></td>
         <td>15,500</td>
         <td>Canberra</td>
         <td>3 Years</td>
@@ -66,7 +66,7 @@
       </tr>
       <tr>
         <td>3</td>
-        <td>Victoria university</td>
+        <td><a href="detailsofinst.html" style="color:black">Victoria university</a></td>
         <td>14,000</td>
         <td>Melbourne</td>
         <td>3 Years</td>
@@ -76,7 +76,7 @@
       </tr>
       <tr>
         <td>4</td>
-        <td>Charles Darwin university</td>
+        <td><a href="detailsofinst.html" style="color:black">Charles Darwin university</a></td>
         <td>16,500</td>
         <td>Sydney</td>
         <td>2 Years</td>
