--- a/Project/fav.html
+++ b/Project/fav.html
@@ -45,7 +45,7 @@
       </tr>
       <tr>
         <td>1</td>
-        <td>Canberra Institute of Technology</td>
+        <td><a href="detailsofinst.html" style="color:black">Canberra Institute of Technology</a></td>
         <td>11,500</td>
         <td>Canberra</td>
         <td>1.5 Years</td>
@@ -55,7 +55,7 @@
       </tr>
       <tr>
         <td>2</td>
-        <td>University of Canberra</td>
+        <td><a href="detailsofinst.html" style="color:black">University of Canberra</a></td>
         <td>15,500</td>
         <td>Canberra</td>
         <td>3 Years</td>
@@ -65,7 +65,7 @@
       </tr>
       <tr>
         <td>3</td>
-        <td>Victoria university</td>
+        <td><a href="detailsofinst.html" style="color:black">Victoria university</a></td>
         <td>14,000</td>
         <td>Melbourne</td>
         <td>3 Years</td>
@@ -75,7 +75,7 @@
       </tr>
       <tr>
         <td>4</td>
-        <td>Charles Darwin university</td>
+        <td><a href="detailsofinst.html" style="color:black">Charles Darwin university</a></td>
         <td>16,500</td>
         <td>Sydney</td>
         <td>2 Years</td>
