--- a/Project/changepass.html
+++ b/Project/changepass.html
@@ -35,7 +35,7 @@
             <div class="form-group">
                 <label for="OldPassword">
                     <span style="color: red; font-size: 1.2em; vertical-align: super;">*</span>
-                    Old Password:&nbsp;
+                    Old Password&nbsp;
                     <span style="color: red; font-size: 0.9em;">Required</span>
                 </label>
                 <div class="password-container">
@@ -49,7 +49,7 @@
             <div class="form-group">
                 <label for="NewPassword">
                     <span style="color: red; font-size: 1.2em; vertical-align: super;">*</span>
-                    New Password:&nbsp;
+                    New Password&nbsp;
                     <span style="color: red; font-size: 0.9em;">    Required</span>
                 </label>
                 <div class="password-container">
@@ -63,7 +63,7 @@
             <div class="form-group">
                 <label for="ConfirmPassword">
                     <span style="color: red; font-size: 1.2em; vertical-align: super;">*</span>
-                    Confirm Password:&nbsp;
+                    Confirm Password&nbsp;
                     <span style="color: red; font-size: 0.9em;">Required</span>
                 </label>
                 <div class="password-container">
