--- a/Project/changepass.html
+++ b/Project/changepass.html
@@ -35,8 +35,8 @@
             <div class="form-group">
                 <label for="OldPassword">
                     <span style="color: red; font-size: 1.2em; vertical-align: super;">*</span>
-                    Old Password:&nbsp;
-                    <span style="color: red; font-size: 0.9em;">Required</span>
+                    Old Password&nbsp;
+                    <span style="color: rgba(255, 0, 0, 0.620); font-size: 0.7em; vertical-align: super;" >Required</span>
                 </label>
                 <div class="password-container">
                     <input type="password" id="Password" name="Password" required>
@@ -49,8 +49,8 @@
             <div class="form-group">
                 <label for="NewPassword">
                     <span style="color: red; font-size: 1.2em; vertical-align: super;">*</span>
-                    New Password:&nbsp;
-                    <span style="color: red; font-size: 0.9em;">    Required</span>
+                    New Password&nbsp;
+                    <span style="color: rgba(255, 0, 0, 0.620); font-size: 0.7em; vertical-align: super;">Required</span>
                 </label>
                 <div class="password-container">
                     <input type="password" id="newPassword" name="newPassword" required>
@@ -63,8 +63,8 @@
             <div class="form-group">
                 <label for="ConfirmPassword">
                     <span style="color: red; font-size: 1.2em; vertical-align: super;">*</span>
-                    Confirm Password:&nbsp;
-                    <span style="color: red; font-size: 0.9em;">Required</span>
+                    Confirm Password&nbsp;
+                    <span style="color: rgba(255, 0, 0, 0.620); font-size: 0.7em; vertical-align: super;">Required</span>
                 </label>
                 <div class="password-container">
                     <input type="password" id="ConfirmPassword" name="ConfirmPassword" required>
