--- a/Project/login.html
+++ b/Project/login.html
@@ -35,13 +35,13 @@
         <div class="form-group" id="Email">
         <label for="Email"> <span style="color: red; font-size: 1.2em; vertical-align: super;">*</span>
           Email Address&nbsp;
-          <span style="color: red; font-size: 0.9em;"><sup>Required</sup></span></label>
+          <span style="color: rgba(255, 0, 0, 0.620); font-size: 0.7em; vertical-align: super;">Required</span></label>
         <input type="email" id="email" name="email" required>
       </div>
       <div class="form-group" id="password-group">
         <label for="Password"> <span style="color: red; font-size: 1.2em; vertical-align: super;">*</span>
           Password&nbsp;
-          <span style="color: red; font-size: 0.9em;"><sup>Required</sup></span></label>
+          <span style="color: rgba(255, 0, 0, 0.620); font-size: 0.7em; vertical-align: super;">Required</span>
         <div class="password-container">
           <input type="password" id="Password" name="Password" required>
           <span class="toggle-password" onclick="togglePasswordVisibility('Password', this)">
