--- a/Project/crosscredit.html
+++ b/Project/crosscredit.html
@@ -37,7 +37,9 @@
         <input type="text" id="SourceInstitution" name="SourceInstitution">
       </div>
       <div class="form-group" id="SourceUnitOutlines">
-        <label for="SourceUnitOutlines">Unit Outlines from Source Institution:<span style="color: red; font-size: 1.2em; vertical-align: super;">*</span></label>
+        <label for="SourceUnitOutlines"><span style="color: red; font-size: 1.2em; vertical-align: super;">*</span>
+          Unit Outlines from Source Institution&nbsp;
+          <span style="color: rgba(255, 0, 0, 0.620); font-size: 0.7em; vertical-align: super;">Required</span></label>
         <input type="file" id="SourceUnitOutlines" name="SourceUnitOutlines[]" accept="application/pdf" multiple required><br>
         <small>Please make sure to rename each unit outline to their respective unit names.</small>
       </div>
@@ -55,7 +57,9 @@
         <input type="text" id="DestinationInstitution" name="DestinationInstitution">
       </div>
       <div class="form-group" id="DestinationUnitOutlines">
-        <label for="DestinationUnitOutlines">Unit Outlines from Destination Institution:<span style="color: red; font-size: 1.2em; vertical-align: super;">*</span></label>
+        <label for="DestinationUnitOutlines"><span style="color: red; font-size: 1.2em; vertical-align: super;">*</span>
+          Unit Outlines from Destination Institution&nbsp;
+          <span style="color: rgba(255, 0, 0, 0.620); font-size: 0.7em; vertical-align: super;">Required</span></label>
         <input type="file" id="DestinationUnitOutlines" name="DestinationUnitOutlines[]" accept="application/pdf" multiple required><br>
         <small>Please make sure to rename each unit outline to their respective unit names.</small>
       </div>
