--- a/Project/signin.html
+++ b/Project/signin.html
@@ -40,7 +40,8 @@
                     <input type="text" id="Name" name="Name" required>
                 </div>
                 <div class="form-group" id="email-group">
-                    <label for="EmailAddress"><span style="color: red; font-size: 1.2em; vertical-align: super;">*</span>
+                    <label for="EmailAddress">
+                        <span style="color: red; font-size: 1.2em; vertical-align: super;">*</span>
                         Email Address&nbsp;
                         <span style="color: rgba(255, 0, 0, 0.620); font-size: 0.7em; vertical-align: super;">Required</span></label>
                     <input type="email" id="EmailAddress" name="EmailAddress" required>
