Detail of institution

--- a/Project/detailsofinst.html
+++ b/Project/detailsofinst.html
@@ -77,6 +77,7 @@
             <h3>Canberra</h3>
             <p>In the heart of Australia’s capital, the Canberra campus offers a peaceful and focused academic setting, close to governmental and national institutions.</p>
         </div>
+        <p><a href="resultofsearch.html" style="color: black; text-decoration:underline;">Back to <strong>Search Result</strong></a></p>
     </div>
   </div>
 
